--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
       href="./src/assets/brainwave-symbol.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brainwave</title>
+    <title>Brainwave – Modern UI/UX Website</title>
+    <!-- SEO Metadata -->
+    <meta name="description" content="Brainwave is a modern UI/UX website built with React.js, Vite, and Tailwind CSS. Sleek design, seamless animations, reusable components, and advanced web features for learning and inspiration." />
+    <meta name="author" content="Arnob Mahmud">
+    <meta name="keywords" content="Brainwave, React, Vite, Tailwind CSS, UI/UX, Modern Web, Parallax, Responsive, Components, Design System, Roadmap, Features, Tutorial, JavaScript Mastery, Reusable, Scalable, Open Source, Arnob Mahmud">
+    <meta name="contact" content="arnob_t78@yahoo.com">
+    <meta name="website" content="https://arnob-mahmud.vercel.app/">
   </head>
   <body>
     <div id="root"></div>
